--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,3 +1,4 @@
+# This is the CI/CD pipeline for the blog microservices project
 name: CI/CD for Docker CI Test Express App
 
 on:
@@ -18,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: "20.x"
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -28,5 +29,5 @@ jobs:
 
       - name: Build & Push Docker Image
         run: |
-          docker build -t "${{ secrets.DOCKER_USERNAME }}"/docker-ci-test:latest .
-          docker push "${{ secrets.DOCKER_USERNAME }}"/docker-ci-test:latest
+          docker build -t fawaz482/docker-ci-test:latest .
+          docker push fawaz482/docker-ci-test:latest
