--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,20 +9,25 @@ on:
       - main
 
 jobs:
-  docker:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Setup up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/docker-ci-test:latest
+          node-version: "20.x"
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWOR }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build and tag image
+        run: docker build -t fawaz482/docker-ci-test:latest .
+
+      - name: Push Docker image
+        run: docker push fawaz482/docker-ci-test:latest
